--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,6 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
-    "multer": "^2.0.2",
-    "pg": "^8.16.3"
+    "multer": "^2.0.2"
   }
 }
